[THEME] Another attempt to fix images on mobile

--- a/themes/clean-blog/sass/_global.scss
+++ b/themes/clean-blog/sass/_global.scss
@@ -77,5 +77,5 @@ img::-moz-selection {
 }
 
 img {
-  max-width: 80vw;
+  max-width: 100%;
 }
